# Mobile_manipulator_trajectory_tracker

./: .gitmodules  CMakeLists.txt  README.md  package.xml
controller/: ros_controller.urdf.xacro  youbot_controller.yaml  youbot_gazebo_controller.yaml  youbot_trajectory_controller.yaml
launch/: youbot_controller.launch  youbot_gazebo.launch  youbot_gazebo_control.launch  youbot_gazebo_world.launch  youbot_with_cam.launch
robots/: youbot_with_cam3d.urdf
rviz/: config.rviz
scripts/: brrt.py  gripper_viz.py  navigation_control.py  rrtsimple.py  rrtstar.py
youbot_control/: CMakeLists.txt  package.xml
youbot_control/config/: youbot.yaml
youbot_control/launch/: controllers.launch
youbot_control/scripts/: ik.py  trajectory_publisher.py
youbot_ros_controllers/: CMakeLists.txt  package.xml
youbot_ros_controllers/config/: youbot.yaml
youbot_ros_controllers/launch/: controllers.launch
