<?xml version="1.0"?>
<package>
  <name>youbot_description</name>
  <version>0.1.0</version>
  <description>Robot descriptions in form of URDF files and meshes</description>

  <maintainer email="ed21b026@smail.iitm.ac.in">Gokul M K</maintainer>
  <maintainer email="ed21b034@smail.iitm.ac.in">Keerthivasan M</maintainer>

  <license>GPLv3</license>

  <author email="ed21b026@smail.iitm.ac.in">Gokul M K</author> -->

  <buildtool_depend>catkin</buildtool_depend>

</package>
